<resources>
    <string name="app_name">Football Apps</string>
    <string name="title_home">Home</string>

    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
    </string-array>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German BundesLiga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
    </string-array>

    <array name="league_image">
        <item>@drawable/img_english_premier_league</item>
        <item>@drawable/img_french_ligue_1</item>
        <item>@drawable/img_german_bundesliga</item>
        <item>@drawable/img_italian_serie_a</item>
        <item>@drawable/img_spanish_la_liga</item>
    </array>

    <array name="league_description">
        <item>The Premier League (often referred to as the English Premier League (EPL) outside
            England), is the top level of the English football league system. Contested by 20 clubs,
            it operates on a system of promotion and relegation with the English Football League
            (EFL).
        </item>
        <item>Ligue 1 (French pronunciation: ​; League 1, formerly known as Division 1), is the
            French professional league for association football clubs. It is the country\'s primary
            football competition and serves as the top division of the French football league
            system. Ligue 1 is one of two divisions making up the Ligue de Football Professionnel,
            the other being Ligue 2. Contested by 20 clubs, it operates on a system of promotion and
            relegation with Ligue 2. Seasons run from August to May, with teams playing 38 games
            each totaling 380 games in the season. Most games are played on Saturdays and Sundays,
            with a few games played during weekday evenings. Play is regularly suspended the last
            weekend before Christmas for two weeks before returning in the second week of January.
            Ligue 1 is one of the top national leagues, currently ranked sixth in Europe behind the
            Spanish La Liga, English Premier League, the German Bundesliga, the Portuguese Primeira
            Liga and the Italian Serie A.
        </item>
        <item>
            The Fußball-Bundesliga (English: Football Federal League), commonly known as the
            Bundesliga, is a professional association football league in Germany and the football
            league with the highest average stadium attendance worldwide. At the top of the German
            football league system, the Bundesliga is Germany\'s primary football competition. The
            Bundesliga is contested by 18 teams and operates on a system of promotion and relegation
            with the 2. Bundesliga. Seasons run from August to May. Most games are played on
            Saturdays and Sundays, with a few games played during weekdays. All of the Bundesliga
            clubs qualify for the DFB-Pokal. The winner of the Bundesliga qualifies for the
            DFL-Supercup.
        </item>
        <item>
            Serie A, also called Serie A TIM due to sponsorship by Telecom Italia, is a professional
            league competition for football clubs located at the top of the Italian football league
            system and has been operating for over eighty years since the 1929–30 season. It had
            been organized by Lega Calcio until 2010, but a new league, the Lega Serie A, was
            created for the 2010–11 season. Serie A is regarded as one of the best football leagues
            in the world. Serie A was considered the best league in the world in the \'90s, and has
            produced the highest number of European Cup finalists: Italian clubs have reached the
            final of the competition on a record twenty-six different occasions, winning the title
            twelve times. Serie A is ranked 4th among European leagues according to UEFA\'s league
            coefficient behind the Spanish La Liga, English Premier League and German Bundesliga,
            which is based on the performance of Italian clubs in the Champions League and the
            Europa League. It also ranked 5th in world according to the first trends of the 2011
            IFFHS rating.
        </item>
        <item>The Primera División, commonly known as La Liga and as La Liga Santander for
            sponsorship reasons, is the top professional association football division of the
            Spanish football league system. Administrated by the Liga de Fútbol Profesional (LFP),
            La Liga is contested by 20 teams, with the three lowest-placed teams relegated to the
            Segunda División and replaced by the top two teams in that division plus the winner of a
            play-off.
        </item>
    </array>

    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Matches</string>
    <string name="tab_text_3">Standings</string>
    <string name="tab_text_4">Teams</string>
    <string name="search_match_hint">Search Match</string>
    <string name="search_team_hint">Search Team</string>
    <string name="title_search">Search</string>
    <string name="description">Description</string>
    <string name="versus_team">-</string>
    <string name="substitutes">Substitutes</string>
    <string name="forwarder">Forwarder</string>
    <string name="midfielder">Midfielder</string>
    <string name="defender">Defender</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="lineups">LINEUPS</string>
    <string name="team_stats">TEAM STATS</string>
    <string name="search_match_here">Search Match here</string>
    <string name="match_not_found">Match Not Found</string>
    <string name="football_apps">Football Apps</string>
    <string name="leagues">Leagues</string>
    <string name="worldwide_football_leagues">Worldwide Football Leagues</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>

    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
    <string name="search_match">Search Match</string>
    <string name="search_team">Search Team</string>
    <string name="formed_year">Formed Year</string>
    <string name="stadium_name">Stadium Name</string>
    <string name="search_team_here">Search Team here</string>
    <string name="team_not_found">Team Not Found</string>
    <string name="club">Club</string>
    <string name="mp">MP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="pts">Pts</string>
</resources>
