<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_standing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="12">

                <View
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/club"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/w"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/d"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gf"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ga"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gd"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pts"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e6e6e6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/standing_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_row_standing" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progress_bar_standing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop" />

</RelativeLayout>