<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_team_detail"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/name_team_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                tools:text="Real Madrid" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/formed_year"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#37474F"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_team_formed_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:text="1997" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/stadium_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#37474F"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_team_stadium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:text="Santiago Bernabeu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#37474F"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_team_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:text="Here is league description." />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>